@@ -26,16 +26,45 @@
 /****************************************************************/
 /****************************************************************/
 /****************************************************************/
+
+/**
+ * Create a new node.
+ * @param tag: The tag id for this node
+ * @return: the newly created node
+ */
 Egxp_Node * egxp_node_new (const int tag);
 
+
+/**
+ * Free a node
+ * @param n: Deallocate the memory used by the node
+ */
 void egxp_node_free (Egxp_Node * n);
 
-void egxp_node_set_cb (Egxp_Node * n, egxp_callback_ptr * begin, egxp_callback_ptr * end);
+
+/**
+ * Set the callback to the node.
+ * This callback are called when the node is processed by the protocol handler.
+ * @param n: the node
+ * @param begin: The begin callback
+ * @param end: the end callback
+ */
+void egxp_node_set_cb (Egxp_Node * n, egxp_callback_ptr begin, egxp_callback_ptr end);
 
 
+/**
+ * Add condition to this node.
+ * @param cn: The node
+ * @param cond: The condition to add
+ */
 void egxp_node_add_condition (Egxp_Node* cn, Egxp_Condition * cond);
 
 
+/**
+ * Add a child to the node
+ * @param parent: The parent node
+ * @param child: The child to add to the parent
+ */
 void egxp_node_add_child (Egxp_Node * parent, Egxp_Node * child);
 
 #endif
